# byteio

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  THANKS  byteio++.h  byteio.h  configure.ac  flip_int16.c  flip_int32.c  flip_int64.c  flip_uint16.c  flip_uint32.c  flip_uint64.c  get__errno.c  index.html  params.json  read_float32.c  read_float64.c  read_int16.c  read_int32.c  read_int64.c  read_int8.c  read_uint16.c  read_uint32.c  read_uint64.c  read_uint8.c  readsafe_float32.c  readsafe_float64.c  readsafe_int16.c  readsafe_int32.c  readsafe_int64.c  readsafe_int8.c  readsafe_uint16.c  readsafe_uint32.c  readsafe_uint64.c  readsafe_uint8.c  (+10 more)
