lib_LTLIBRARIES = libbyteio.la
libbyteio_la_SOURCES = \
                       get__errno.c \
                       \
                       read_int8.c \
                       read_int16.c \
                       read_int32.c \
                       read_int64.c \
                       \
                       read_uint8.c \
                       read_uint16.c \
                       read_uint32.c \
                       read_uint64.c \
                       \
                       read_float32.c \
                       read_float64.c \
                       \
                       readsafe_int8.c \
                       readsafe_int16.c \
                       readsafe_int32.c \
                       readsafe_int64.c \
                       \
                       readsafe_uint8.c \
                       readsafe_uint16.c \
                       readsafe_uint32.c \
                       readsafe_uint64.c \
                       \
                       readsafe_float32.c \
                       readsafe_float64.c \
                       \
                       write_int8.c \
                       write_int16.c \
                       write_int32.c \
                       write_int64.c \
                       \
                       write_uint8.c \
                       write_uint16.c \
                       write_uint32.c \
                       write_uint64.c \
                       \
                       write_float32.c \
                       write_float64.c 
include_HEADERS = byteio.h byteio++.h

ACLOCAL_AMFLAGS = -I m4
